@@ -1,3 +1,6 @@
+2011-05-27 arnaud.fontaine
+* Remove meaningless 'Order Quantity Unit' and 'Order Quantity' columns, and use the translated title for the 'Quantity Unit' cells in Transformation Stock view.
+
 2011-05-23 tatuya
 * Add Stock view into Transformation portal type.
 
